c4prj2_input/grade.txt
Grading at Sat Aug  3 06:44:50 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:15:13: error: ‘std’ undeclared (first use in this function)
          if(std[i] == '?') {
             ^
input.c:15:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation of input.c failed

Overall Grade: F
